feat: - Achieve repository for users - Achieve Commands and Queries func
